--- a/examenparcial/Views/Home/Index.cshtml
+++ b/examenparcial/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Aplicación de Gestión de Cuentas Bancarias para un Banco en EE. UU</h1>
+    <h1 class="display-4">Aplicación de Gestión de Cuentas Bancarias para un Banco en USA</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
